--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,6 +9,15 @@ steps:
     name: "gcr.io/cloud-builders/docker"
     args: ["push", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}:${COMMIT_SHA}"]
 
+  # Deploy containers to GKE
+  - name: 'gcr.io/cloud-builders/gke-deploy'
+    args:
+    - run 
+    - --filename=k8s/deployment.yaml
+    - --image=gcr.io/${PROJECT_ID}/${_SERVICE_NAME}:${COMMIT_SHA} 
+    - --location=us-central1-a
+    - --cluster=k8s-cluster
+
 # Here are the substitution variables related to the services.
 substitutions:
   _REGION: us-central1 # The region where the cloud services are located.
